@@ -4,10 +4,7 @@ import jakarta.persistence.*;
 import lombok.*;
 
 import java.util.ArrayList;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 @Entity(name = "UserGroup")
 @Table(name = "`groups`") // Notă: 'groups' este cuvânt rezervat în MySQL, dar JPA se descurcă dacă e setat corect.
@@ -25,7 +22,7 @@ public class Group {
     @Column(nullable = false, length = 45)
     private String name;
 
-    @Column(name = "img_link", length = 2048)
+    @Column(name = "img_link", columnDefinition = "LONGTEXT")
     private String imgLink;
 
     @Column(name = "`desc`", columnDefinition = "LONGTEXT")
@@ -64,6 +61,6 @@ public class Group {
     public List<User> getUsers() {
         return members.stream()
                 .map(GroupMember::getUser)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
